--- a/Rapport/content/abstract.tex
+++ b/Rapport/content/abstract.tex
@@ -46,6 +46,6 @@ communication with the FPGA using SPI.
 On the microcontroller FreeRTOS, an operating system using preemptive scheduling, was used 
 to ensure hard realtime perfomance.
 The FPGA was programmed to keep count of the motorrotations, to produce PWM 
-signals to the motors and to communicate with the microcontroler as a SPI slave.
+signals to the motors and to communicate with the microcontroller as a SPI slave.
 
 \todo[inline,color=pink,author=Mikkel]{Bør skrives færdig når konklusion osv. er skrevet.}
