--- a/Rapport/content/forside.tex
+++ b/Rapport/content/forside.tex
@@ -1,5 +1,6 @@
 \title{Styring og regulering af et Pan \& Tilt system \\Robotteknologi 4. semesterprojekt}
-\author{Gruppe 2 \\ Åse, Mikael, Mikkel, Nikolaj, Michael \& Anders}
+%\author{Åse, Mikael, Mikkel, Nikolaj, Michael \& Anders}
+\author{Anders Launer Bæk, Michael Kjær Schmidt, Mikael Westermann, \\Mikkel Skaarup Jaedicke, Nikolaj Iversen \& Åse Videbæk Jensen}
 \date{Maj 2014}
 \begin{figure}
 \centering
