--- a/Rapport/graphics/digitalkontroller3.tex
+++ b/Rapport/graphics/digitalkontroller3.tex
@@ -1,7 +1,8 @@
 \node [input, name=input] {};
 \node [block, right of=input] (AD) {A/D};
 \node[freq,below of=AD,yshift=1cm](freq60){120 [Hz]};
-\node [block, right of=AD,xshift=0cm] (Koordinattransformation) {Koor.trans};
+\node [block, right of=AD,xshift=0cm] (DD) {D/D};
+\node [block, right of=DD,xshift=0cm] (Koordinattransformation) {Koor.trans};
 \node[sum,right of= Koordinattransformation,xshift=1cm](sum1){Sum};
 \node [block, right of=sum1,xshift=-0.5cm] (Dz) {\(D\left(z\right)\)};
 \node [block, right of=Dz] (Hzoh) {$G_{zoh}\left(z\right)$};
@@ -9,8 +10,9 @@
 
 
 \draw [draw,->] (input) -- node {\footnotesize $Pos\left(t\right)$} (AD);
-\draw [draw,->] (freq60) -- (AD);
-\draw [draw,->] (AD) -- node {\footnotesize $x\left(k\right)$} (Koordinattransformation);
+\draw [dashed,draw,->] (freq60) -- (AD);
+\draw [draw,->] (AD) -- node {\footnotesize $x\left(k\right)$} (DD);
+\draw [draw,->] (DD) -- node {\footnotesize $x_1\left(k\right)$} (Koordinattransformation);
 \draw [draw,->] (Koordinattransformation) -- node[pos=0.8] {\footnotesize +} (sum1);%node [near end] (sum1);
 \draw [draw,->] (sum1) -- node {\footnotesize $e\left(k\right)$} (Dz);
 \draw [draw,->] (Dz) -- node {\footnotesize $u\left(k\right)$} (Hzoh);
