Tilføjet lidt indled og bilag

--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -38,7 +38,8 @@
 \bibliography{litteraturliste}
 %%%%%%%%%%%% Appendix %%%%%%%%%%%%
 \include{./content/appen}
-
+%%%%%%%%%%%% Bilag %%%%%%%%%%%%%%%
+\include{./content/bilag}
 
 
 \end{document} 
