--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -48,7 +48,7 @@ PID&\(22,3440 \) &  \( 1493,7 \) & \(0,0836  \)&\(22,2720 \) &  \( 1302,2 \) & \
 
 Disse koefficienter ville skabe meget overshoot som vil skade systemet. Systemet er ikke testet med disse koefficienter. 
 Istedet er der ved brug af PID tool og simulink i matlab fundet frem til nogle koefficienter.
-Disse koefficienter er testet og plottet i Figur \ref{PID_test14_plot} 
+Disse koefficienter er testet og plottet i Figur \ref{PID_test14_plot}.
 \begin{figure}
 \centering
   \begin{tabular}{lccc}
