--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -34,7 +34,8 @@ Bemærk at denne konfiguration er for ét SISO-undersystem (enten pan eller tilt
 og at mikrocontrolleren skal regulere begge SISO-undersystemer.
 \begin{figure}[!th]
 \centering
-\begin{tikzpicture}[auto, node distance=2.6cm,>=latex']
+% \begin{tikzpicture}[auto, node distance=2.6cm,>=latex']
+\begin{tikzpicture}[scale=0.8, every node/.style={scale=0.8}, node distance=2.6cm, =>latex']
 \include*{./graphics/digitalkontroller1}
 \end{tikzpicture}
 \caption[Systemkonfiguration]{Systemkonfiguration (blokdiagram).
@@ -79,7 +80,8 @@ for det fysiske system. Den kontinuerte del af systemet, som ønskes diskretiser
 er markeret på figur \ref{fig:digitalkontroller2}.
 \begin{figure}[!th]
 \centering
-\begin{tikzpicture}[auto, node distance=2.6cm,>=latex']
+% \begin{tikzpicture}[auto, node distance=2.6cm,>=latex']
+\begin{tikzpicture}[scale=0.8, every node/.style={scale=0.8}, node distance=2.6cm, =>latex']
 \include*{./graphics/digitalkontroller2}
 \end{tikzpicture}
 \caption[Diskretisering af åbensløjfeoverføringsfunktion]{Diskretisering af åbensløjfdeoverføringsfunktion.
