--- a/Rapport/graphics/3d_in_xyz_plane.tex
+++ b/Rapport/graphics/3d_in_xyz_plane.tex
@@ -28,7 +28,7 @@
 \node (E) at (-0.55,0.625,-0.55) {\tiny \(\rho\)};
 
 \node (C) at (0.25,0,0.15) {\scriptsize Origo PTS};
-\node (D) at (-0.65,0.75,-0.75) {\scriptsize Due};
+\node (D) at (-0.60,0.75,-0.75) {\scriptsize Lerdue};
 
 \path [bend right] (Px1) edge (Px);
 \path [bend right] (Py1) edge (Py);
@@ -37,4 +37,3 @@
 
 \fill (O) circle[radius=0.3pt];
 \fill (P) circle[radius=0.3pt];
-
