Tak til Esmaeil?

--- a/Rapport/content/forord.tex
+++ b/Rapport/content/forord.tex
@@ -6,8 +6,8 @@ Herunder lægges især vægt på hvilke valg der er truffet undervejs og hvorfor
 Rapportens målgruppe er andre studerende med kompetenceniveau svarende til 4. semester eller derover, på samme eller lignende uddannelser.
 Formålet med projektet er at kombinere semestrets forskellige fagligheder, og samtidig oparbejde kompetencer i problemorienteret projektarbejde.
 
-En stor tak til Prof. Esmaeil S. Nadimi for vejledning af højeste kvalitet.
-
+%En stor tak til Prof. Esmaeil S. Nadimi for vejledning af højeste kvalitet.
+\todo[inline,color=pink,author=Mikkel]{Måske en tak til Esmaeil?}
 
 
 %Nedenstående er Egon Olsen citat.
